feat: Enhance article filtering with tags and add product status to favorite products